Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UCharacterMovementComponent.h

	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_AirControl_GET(UCharacterMovementComponent* Ptr) { return Ptr->AirControl; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_AirControl_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->AirControl = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_AirControlBoostMultiplier_GET(UCharacterMovementComponent* Ptr) { return Ptr->AirControlBoostMultiplier; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_AirControlBoostMultiplier_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->AirControlBoostMultiplier = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_AirControlBoostVelocityThreshold_GET(UCharacterMovementComponent* Ptr) { return Ptr->AirControlBoostVelocityThreshold; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_AirControlBoostVelocityThreshold_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->AirControlBoostVelocityThreshold = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_AvoidanceConsiderationRadius_GET(UCharacterMovementComponent* Ptr) { return Ptr->AvoidanceConsiderationRadius; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_AvoidanceConsiderationRadius_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->AvoidanceConsiderationRadius = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_AvoidanceUID_GET(UCharacterMovementComponent* Ptr) { return Ptr->AvoidanceUID; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_AvoidanceUID_SET(UCharacterMovementComponent* Ptr, int32 Value) { Ptr->AvoidanceUID = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_AvoidanceWeight_GET(UCharacterMovementComponent* Ptr) { return Ptr->AvoidanceWeight; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_AvoidanceWeight_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->AvoidanceWeight = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_bEnablePhysicsInteraction_GET(UCharacterMovementComponent* Ptr) { return Ptr->bEnablePhysicsInteraction; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_bEnablePhysicsInteraction_SET(UCharacterMovementComponent* Ptr, bool Value) { Ptr->bEnablePhysicsInteraction = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_bPushForceScaledToMass_GET(UCharacterMovementComponent* Ptr) { return Ptr->bPushForceScaledToMass; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_bPushForceScaledToMass_SET(UCharacterMovementComponent* Ptr, bool Value) { Ptr->bPushForceScaledToMass = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_bPushForceUsingZOffset_GET(UCharacterMovementComponent* Ptr) { return Ptr->bPushForceUsingZOffset; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_bPushForceUsingZOffset_SET(UCharacterMovementComponent* Ptr, bool Value) { Ptr->bPushForceUsingZOffset = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_BrakingDecelerationFalling_GET(UCharacterMovementComponent* Ptr) { return Ptr->BrakingDecelerationFalling; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_BrakingDecelerationFalling_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->BrakingDecelerationFalling = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_BrakingDecelerationFlying_GET(UCharacterMovementComponent* Ptr) { return Ptr->BrakingDecelerationFlying; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_BrakingDecelerationFlying_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->BrakingDecelerationFlying = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_BrakingDecelerationSwimming_GET(UCharacterMovementComponent* Ptr) { return Ptr->BrakingDecelerationSwimming; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_BrakingDecelerationSwimming_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->BrakingDecelerationSwimming = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_BrakingDecelerationWalking_GET(UCharacterMovementComponent* Ptr) { return Ptr->BrakingDecelerationWalking; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_BrakingDecelerationWalking_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->BrakingDecelerationWalking = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_BrakingFriction_GET(UCharacterMovementComponent* Ptr) { return Ptr->BrakingFriction; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_BrakingFriction_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->BrakingFriction = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_BrakingFrictionFactor_GET(UCharacterMovementComponent* Ptr) { return Ptr->BrakingFrictionFactor; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_BrakingFrictionFactor_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->BrakingFrictionFactor = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_bScalePushForceToVelocity_GET(UCharacterMovementComponent* Ptr) { return Ptr->bScalePushForceToVelocity; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_bScalePushForceToVelocity_SET(UCharacterMovementComponent* Ptr, bool Value) { Ptr->bScalePushForceToVelocity = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_bTouchForceScaledToMass_GET(UCharacterMovementComponent* Ptr) { return Ptr->bTouchForceScaledToMass; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_bTouchForceScaledToMass_SET(UCharacterMovementComponent* Ptr, bool Value) { Ptr->bTouchForceScaledToMass = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_Buoyancy_GET(UCharacterMovementComponent* Ptr) { return Ptr->Buoyancy; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_Buoyancy_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->Buoyancy = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_CachedProjectedNavMeshHitResult_GET(UCharacterMovementComponent* Ptr) { return (INT_PTR)&(Ptr->CachedProjectedNavMeshHitResult); }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_CachedProjectedNavMeshHitResult_SET(UCharacterMovementComponent* Ptr, INT_PTR Value) { Ptr->CachedProjectedNavMeshHitResult = *(FHitResult*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_CrouchedHalfHeight_GET(UCharacterMovementComponent* Ptr) { return Ptr->CrouchedHalfHeight; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_CrouchedHalfHeight_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->CrouchedHalfHeight = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_CrouchedSpeedMultiplier_DEPRECATED_GET(UCharacterMovementComponent* Ptr) { return Ptr->CrouchedSpeedMultiplier_DEPRECATED; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_CrouchedSpeedMultiplier_DEPRECATED_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->CrouchedSpeedMultiplier_DEPRECATED = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_CurrentFloor_GET(UCharacterMovementComponent* Ptr) { return (INT_PTR)&(Ptr->CurrentFloor); }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_CurrentFloor_SET(UCharacterMovementComponent* Ptr, INT_PTR Value) { Ptr->CurrentFloor = *(FFindFloorResult*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_CustomMovementMode_GET(UCharacterMovementComponent* Ptr) { return Ptr->CustomMovementMode; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_CustomMovementMode_SET(UCharacterMovementComponent* Ptr, uint8 Value) { Ptr->CustomMovementMode = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_DeferredUpdatedMoveComponent_GET(UCharacterMovementComponent* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->DeferredUpdatedMoveComponent); }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_DeferredUpdatedMoveComponent_SET(UCharacterMovementComponent* Ptr, USceneComponent* Value) { Ptr->DeferredUpdatedMoveComponent = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_FallingLateralFriction_GET(UCharacterMovementComponent* Ptr) { return Ptr->FallingLateralFriction; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_FallingLateralFriction_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->FallingLateralFriction = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_GravityScale_GET(UCharacterMovementComponent* Ptr) { return Ptr->GravityScale; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_GravityScale_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->GravityScale = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_GroundFriction_GET(UCharacterMovementComponent* Ptr) { return Ptr->GroundFriction; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_GroundFriction_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->GroundFriction = Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_UCharacterMovementComponent(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<UCharacterMovementComponent>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}